--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emicake</title>
+    <meta class="description" content="Pasteleria y reposteria Emicake">
+    <meta name="keyword" content="Emicake, pasteleria,reposteria,sweets,productos">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
