--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emicake</title>
-    <meta class="description" content="Pasteleria y reposteria Emicake">
-    <meta name="keyword" content="Emicake, pasteleria,reposteria,sweets,productos">
+    <meta class="description" content="Pasteleria y reposteria Emicake" />
+    <meta name="keywords" content="Emicake, pasteleria, reposteria, sweets, productos" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,9 +25,7 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar-dark bg- fixed-top">
         <div class="container">
-          <a href="#" class="navbar-brand"
-            ><span class="text-primary">Emy</span>cake</a
-          >
+          <a href="#" class="navbar-brand"><span class="text-primary">Emy</span>cake</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -45,17 +43,13 @@
                 <a href="./index.html" class="nav-link">Inicio</a>
               </li>
               <li class="nav-item">
-                <a href="Pages/nosotros.html" class="nav-link"
-                  >Sobre nosotros</a
-                >
+                <a href="Pages/nosotros.html" class="nav-link">Sobre nosotros</a>
               </li>
               <li class="nav-item">
                 <a href="Pages/Productos.html" class="nav-link">Productos</a>
               </li>
               <li class="nav-item">
-                <a href="Pages/Contactenos.html" class="nav-link"
-                  >Contáctenos</a
-                >
+                <a href="Pages/Contactenos.html" class="nav-link">Contáctenos</a>
               </li>
               <li class="nav-item">
                 <a href="Pages/Ubicacion.html" class="nav-link">Ubicación</a>
@@ -71,43 +65,41 @@
         <h2>Living sweet life</h2>
         <p>Horneando con amor.</p>
         <div class="home-btn">
-          <a href="./Pages/Productos.html"><button>ver productos</button></a>
+          <a href="./Pages/Productos.html"><button>Ver productos</button></a>
         </div>
       </div>
     </section>
 
     <div class="testimonials">
       <div class="inner">
-        <h3 class="text-center">Valoracion de los Clientes</h3>
+        <h3 class="text-center">Valoración de los Clientes</h3>
         <div class="border"></div>
       </div>
 
       <div class="row">
         <div class="col">
           <div class="testimonial">
-            <img src="./assets/multimedia/cliente1.jpg" alt="" />
+            <img src="./assets/multimedia/cliente1.jpg" alt="Cliente 1" />
             <div class="name">Martha Quiñones</div>
             <div class="stars">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-
             <p>Excelente servicio, muy buenos productos</p>
           </div>
         </div>
 
         <div class="col">
           <div class="testimonial">
-            <img src="./assets/multimedia/cliente 2.jpg" alt="" />
+            <img src="./assets/multimedia/cliente2.jpg" alt="Cliente 2" />
             <div class="name">Monica Suarez</div>
             <div class="stars">
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </div>
-
-            <p>Muy buenos prodctos, los super recomiendo</p>
+            <p>Muy buenos productos, los super recomiendo</p>
           </div>
         </div>
       </div>
@@ -126,16 +118,14 @@
       <div class="footerNav">
         <ul>
           <li><a href="#">Noticias</a></li>
-          <li><a href="#">Contactenos</a></li>
+          <li><a href="#">Contáctenos</a></li>
           <li><a href="#">Otros temas</a></li>
         </ul>
       </div>
       <br />
       <div class="footerBooton">
         <p>
-          Todos los derechos reservados a emicake &copy;2024;<span
-            class="designer"
-          ></span>
+          Todos los derechos reservados a Emicake &copy;2024;<span class="designer"></span>
         </p>
       </div>
     </footer>
