--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Emicake</title>
     <meta class="description" content="Pasteleria y reposteria Emicake" />
-    <meta name="keywords" content="Emicake, pasteleria, reposteria, sweets, productos" />
+    <meta
+      name="keywords"
+      content="Emicake, pasteleria, reposteria, sweets, productos"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,7 +28,9 @@
     <header class="header">
       <nav class="navbar navbar-expand-lg navbar-dark bg- fixed-top">
         <div class="container">
-          <a href="#" class="navbar-brand"><span class="text-primary">Emy</span>cake</a>
+          <a href="#" class="navbar-brand"
+            ><span class="text-primary">Emy</span>cake</a
+          >
           <button
             class="navbar-toggler"
             type="button"
@@ -43,13 +48,17 @@
                 <a href="./index.html" class="nav-link">Inicio</a>
               </li>
               <li class="nav-item">
-                <a href="Pages/nosotros.html" class="nav-link">Sobre nosotros</a>
+                <a href="Pages/nosotros.html" class="nav-link"
+                  >Sobre nosotros</a
+                >
               </li>
               <li class="nav-item">
                 <a href="Pages/Productos.html" class="nav-link">Productos</a>
               </li>
               <li class="nav-item">
-                <a href="Pages/Contactenos.html" class="nav-link">Contáctenos</a>
+                <a href="Pages/Contactenos.html" class="nav-link"
+                  >Contáctenos</a
+                >
               </li>
               <li class="nav-item">
                 <a href="Pages/Ubicacion.html" class="nav-link">Ubicación</a>
@@ -92,7 +101,7 @@
 
         <div class="col">
           <div class="testimonial">
-            <img src="./assets/multimedia/cliente2.jpg" alt="Cliente 2" />
+            <img src="assets/multimedia/cliente1.jpg" alt="Cliente 2" />
             <div class="name">Monica Suarez</div>
             <div class="stars">
               <i class="fa-solid fa-star"></i>
@@ -125,7 +134,9 @@
       <br />
       <div class="footerBooton">
         <p>
-          Todos los derechos reservados a Emicake &copy;2024;<span class="designer"></span>
+          Todos los derechos reservados a Emicake &copy;2024;<span
+            class="designer"
+          ></span>
         </p>
       </div>
     </footer>
